--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -d src/configs/typeorm.config.js -- ",
+    "migration:generate": "pnpm typeorm -- migration:generate",
+    "migration:revert": "pnpm typeorm -- migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
