--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,9 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node ./node_modules/typeorm/cli -d src/configs/typeorm.config.js -- ",
-    "migration:generate": "pnpm typeorm -- migration:generate",
-    "migration:revert": "pnpm typeorm -- migration:revert"
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/migrations/$npm_config_name --dataSource ./src/configs/typeorm.config.ts",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run --dataSource ./src/configs/typeorm.config.ts",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create ./src/migrations/$npm_config_name",
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -34,6 +35,7 @@
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv-cli": "^7.4.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
