--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "^5.16.4",
+    "@mui/x-data-grid": "^7.11.0",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
