--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^7.11.0",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
