--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "^5.16.4",
     "@mui/x-data-grid": "^7.11.0",
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "notistack": "^3.0.1",
