--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
